fixed pull quote on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,6 @@ body {
 
   background-color: rgb(236, 236, 233);
   color: #3e3e3e;
-
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
 }
 
 h1 {
@@ -25,7 +22,7 @@ main {
 /* ========================== */
 header {
   height: 10vh;
-  background-color: rgb(17, 17, 17, 0.8);
+  background-color: rgba(17, 17, 17, 0.8);
 
   display: flex;
   justify-content: center;
@@ -61,9 +58,9 @@ nav a:hover {
 /* ========================== */
 
 .hero {
-  background-color: rgba(255, 255, 255, 0.1);
-
+  background-color: rgb(0, 0, 0);
   background-image: url('/img/janko-ferlic-specialdaddy-sfL_QOnmy00-unsplash.jpg');
+
   background-blend-mode: lighten;
   background-repeat: no-repeat;
   background-size: cover;
@@ -85,7 +82,7 @@ nav a:hover {
 .hero h1, .hero p {
   padding: .3em;
 
-  background-color: rgb(17, 17, 17, 0.8);
+  background-color: rgba(17, 17, 17, 0.8);
   color: white;
 
   text-align: center;
@@ -536,7 +533,12 @@ footer p {
   .blog-post {
     width: 100vw;
   }
-  
+
+  /* Try to center the pull quote to avoid too many line breaks */
+  .blog-post blockquote {
+    margin: 0;
+  }
+
   /* Contact Page */
   .contact {
     width: 100vw;
